# advantofcode2019

./: CMakeLists.txt
day1/: main.cpp
day2/: main.cpp
day3/: Fabric.h  Patch.h  Size.h  Start.h  main.cpp
day4/: main.cpp  test_input.txt
day5/: main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
